--- a/src/main/resources/templates/layouts/editview/editServiceCategory.html
+++ b/src/main/resources/templates/layouts/editview/editServiceCategory.html
@@ -38,9 +38,9 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i>Master</a></li>
+							<li><a href="#">Store</a></li>
+							<li class="active">edit service category</li>
 						</ol>
 					</section>
 
