--- a/src/main/resources/templates/layouts/listview/listofParty.html
+++ b/src/main/resources/templates/layouts/listview/listofParty.html
@@ -78,9 +78,9 @@
 															<td th:text="${party.partyCode}">Garrett Winters</td>
 															<td th:text="${party.partyName}">Garrett Winters</td>
 
-															<td th:if="${party.partyTyp=='S'}">Supplier</td>
-															<td th:if="${party.partyTyp=='C'}">Customer</td>
-															<td th:if="${party.partyTyp=='B'}">Both</td>
+															<td th:if="${party.custType=='S'}">Supplier</td>
+															<td th:if="${party.custType=='C'}">Customer</td>
+															<td th:if="${party.custType=='B'}">Both</td>
 
 
 
