--- a/src/main/resources/templates/layouts/Master/partyMaster.html
+++ b/src/main/resources/templates/layouts/Master/partyMaster.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
@@ -65,22 +66,35 @@
 			<div class="wrapper">
 
 				<section class="content-wrapper">
-					<div class="row">
-						<!-- left column -->
+
+					<!-- form start -->
+					<form id="itemMasterForm" role="form" th:action="@{/party/}"
+						th:object="${partyMaster}" method="post">
+						<div class="row">
+							<!-- left column -->
 
 
 
 
-						<div class="col-md-12" style="margin-top: 20px;">
+							<div class="col-md-12" style="margin-top: 20px;">
 
-							<div class="box box-primary">
-								<input type="hidden" id="mess" name="mess" th:value="${message}">
-								<div class="box-header with-border">
-									<h3 class="box-title">Party Master</h3>
-								</div>
-								<!-- form start -->
-								<form id="itemMasterForm" role="form" th:action="@{/party/}"
-									th:object="${partyMaster}" method="post">
+								<div class="box box-primary">
+									<input type="hidden" id="mess" name="mess"
+										th:value="${message}">
+									<div class="box-header with-border">
+										<h3 class="box-title">Party Master</h3>
+									</div>
+									
+									<div class="box-header with-border text-right"> 
+
+										<button type="submit" id="submit" class="btn btn-primary btn-sm"> <i class="fa fa-hdd-o" aria-hidden="true"></i> Submit</button>
+										<button type="reset" value="reset" class="btn btn-secondary btn-sm"> <i class="fa fa-refresh" aria-hidden="true"></i> Reset</button>
+										
+										<a th:href="@{/party/list}" class="btn btn-success btn-sm"> <i class="fa fa-list" aria-hidden="true"></i> View All</a>
+										
+
+									</div>
+
 
 									<div class="box-body">
 
@@ -128,7 +142,7 @@
 																<label for="inputPassword4">Type</label><span
 																	style="color: red">*</span> <select
 																	class="form-control" title="type"
-																	th:field="*{partType}" required>
+																	th:field="*{custType}" required>
 																	<option value="">Select</option>
 																	<option value="S">Supplier</option>
 																	<option value="C">Customer</option>
@@ -147,12 +161,13 @@
 																<label for="inputPassword4">Representative Code</label>
 																<input type="text" class="form-control"
 																	id="representCode" placeholder="Representative Code"
-																	title="representative code"  readonly>
+																	title="representative code" readonly>
 															</div>
 															<div class="form-group col-md-4">
 																<label for="inputPassword4">Representative Name</label>
 																<select class="form-control" id="representName"
-																	title="representative name"  th:field="*{repCode}" onchange="selectRepresent()" required>
+																	title="representative name" th:field="*{repCode}"
+																	onchange="selectRepresent()" required>
 																	<option value="">Select</option>
 																	<option th:each="employee :  ${listEmployee}"
 																		th:text="${employee.empName}"
@@ -194,9 +209,9 @@
 															</div>
 
 															<div class="form-group col-md-4">
-																<label for="inputPassword4">Country</label><select class="form-control"
-																	id="departmentDropdown" title="Department Name"
-																	th:field="*{countryCode}">
+																<label for="inputPassword4">Country</label><select
+																	class="form-control" id="departmentDropdown"
+																	title="Department Name" th:field="*{countryCode}">
 																	<option value="">Select</option>
 																	<option th:each="country :  ${listCountry}"
 																		th:text="${country.countryName}"
@@ -212,18 +227,20 @@
 																	onkeypress="return alpha(event)" th:field="*{pinCode}"
 																	maxlength="6">
 															</div>
-															
+
 															<div class="form-group col-md-4">
 																<label for="inputPassword4">Phone</label> <input
 																	type="text" class="form-control" id="inputPassword4"
-																	placeholder="Phone" title="phone" th:field="*{partyPhone}"
+																	placeholder="Phone" title="phone"
+																	th:field="*{partyPhone}"
 																	onkeypress="return alpha(event)" maxlength="10">
 															</div>
 
 															<div class="form-group col-md-4">
-																<label for="inputPassword4">Mobile</label><input type="text"
-																	class="form-control" id="inputPassword4" 
-																	placeholder="Mobile" title="mobile" th:field="*{partyMobNo}"
+																<label for="inputPassword4">Mobile</label><input
+																	type="text" class="form-control" id="inputPassword4"
+																	placeholder="Mobile" title="mobile"
+																	th:field="*{partyMobNo}"
 																	onkeypress="return alpha(event)" maxlength="10">
 															</div>
 
@@ -241,8 +258,8 @@
 															</div>
 
 															<div class="form-group col-md-4">
-																<label for="inputPassword4">Website</label><input type="url"
-																	class="form-control" id="inputPassword4"
+																<label for="inputPassword4">Website</label><input
+																	type="url" class="form-control" id="inputPassword4"
 																	placeholder="website" title="website"
 																	th:field="*{partyWebsite}">
 															</div>
@@ -250,12 +267,13 @@
 															<div class="form-group col-md-4">
 																<label for="inputPassword4">Contact Person</label> <input
 																	type="text" class="form-control" id="inputPassword4"
-																	placeholder="Contact Person" title="contact person">  <!-- partyConp -->
+																	placeholder="Contact Person" title="contact person">
+																<!-- partyConp -->
 															</div>
 
 															<div class="form-group col-md-4">
-																<label for="inputPassword4">Phone No</label><input type="text"
-																	class="form-control" id="inputPassword4"
+																<label for="inputPassword4">Phone No</label><input
+																	type="text" class="form-control" id="inputPassword4"
 																	onkeypress="return alpha(event)" placeholder="Phone No"
 																	title="phone no" maxlength="10">
 															</div>
@@ -488,8 +506,9 @@
 																		No.</label>
 																	<div class="col-md-8">
 																		<input type="text" class="form-control" id=""
-																			placeholder="GST No." title="gst no" maxlength="15" 
-																			th:field="*{gstNo}" onkeypress="return alphaNumeric(event)">
+																			placeholder="GST No." title="gst no" maxlength="15"
+																			th:field="*{gstNo}"
+																			onkeypress="return alphaNumeric(event)">
 																	</div>
 																</div>
 															</div>
@@ -645,7 +664,7 @@
 																		<fieldset>
 																			<select class="form-control form-control-sm select"
 																				id="departmentDropdown" title="state code"
-																				name="listPartyBilling[0].billingStateCode" >
+																				name="listPartyBilling[0].billingStateCode">
 																				<option value="">Select</option>
 																				<option th:each="state :  ${listState}"
 																					th:text="${state.stateName}"
@@ -656,15 +675,17 @@
 																	<td>
 																		<fieldset>
 																			<input type="text" class="form-control"
-																				placeholder="Pin" id="insCompanyName0" title="pin code"
-																				name="listPartyBilling[0].billingPinCode" onkeypress="return alpha(event)" maxlength="6">
+																				placeholder="Pin" id="insCompanyName0"
+																				title="pin code"
+																				name="listPartyBilling[0].billingPinCode"
+																				onkeypress="return alpha(event)" maxlength="6">
 																		</fieldset>
 																	</td>
 																	<td>
 																		<fieldset>
 																			<select class="form-control form-control-sm select"
 																				title="Country Name"
-																				name="listPartyBilling[0].billingCountryCode" >
+																				name="listPartyBilling[0].billingCountryCode">
 																				<option value="">Select</option>
 																				<option th:each="country :  ${listCountry}"
 																					th:text="${country.countryName}"
@@ -756,7 +777,7 @@
 																			<fieldset>
 																				<select class="form-control form-control-sm select"
 																					id="departmentDropdown" title="city"
-																					name="listPartyConsignee[0].city" >
+																					name="listPartyConsignee[0].city">
 																					<option value="">Select</option>
 																					<option th:each="city :  ${listCity}"
 																						th:text="${city.cityName}"
@@ -768,7 +789,7 @@
 																			<fieldset>
 																				<select class="form-control form-control-sm select"
 																					id="departmentDropdown" title="country"
-																					name="listPartyConsignee[0].country" >
+																					name="listPartyConsignee[0].country">
 																					<option value="">Select</option>
 																					<option th:each="country :  ${listCountry}"
 																						th:text="${country.countryName}"
@@ -780,7 +801,8 @@
 																			<fieldset>
 																				<input type="text" class="form-control"
 																					placeholder="Pin" id="insCompanyName0"
-																					name="listPartyConsignee[0].pin" title="pin code" onkeypress="return alpha(event)" maxlength="6">
+																					name="listPartyConsignee[0].pin" title="pin code"
+																					onkeypress="return alpha(event)" maxlength="6">
 																			</fieldset>
 																		</td>
 
@@ -795,11 +817,7 @@
 
 													</div>
 
-													<div class="box-footer">
-														<button type="submit" class="btn btn-primary">Submit</button>
-														<input type="reset" value="Reset" class="btn btn-danger" />
-													</div>
-												</div>
+																									</div>
 												<!--end packing detail -->
 
 
@@ -811,21 +829,19 @@
 											</div>
 										</div>
 									</div>
-								</form>
-								<div style="width: parent; text-align-last: right; margin: 8px">
-									<a th:href="@{/party/list}">View All Party</a>
+
+									
 								</div>
 
+								<!-- end box primary  -->
 							</div>
 
-							<!-- end box primary  -->
+							<!-- end left column -->
+
+
+
 						</div>
-
-						<!-- end left column -->
-
-
-
-					</div>
+					</form>
 				</section>
 			</div>
 		</div>
@@ -939,9 +955,8 @@
 				return false;
 			}
 		}
-		
-		
-		function selectRepresent(){
+
+		function selectRepresent() {
 			var representName = document.getElementById("representName").value;
 			document.getElementById("representCode").value = representName
 		}
