--- a/src/main/resources/templates/layouts/Master/requestForQuotation.html
+++ b/src/main/resources/templates/layouts/Master/requestForQuotation.html
@@ -58,9 +58,10 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i> Purchase
+									Module</a></li>
+							<li><a href="#">RFQ</a></li>
+							<li class="active">Add page</li>
 						</ol>
 					</section>
 
@@ -68,31 +69,50 @@
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+						<form role="form" th:action="@{/requestquotation/}" method="POST"
+							th:object="${rFQuotation}">
+
+							<!-- Default box -->
+							<div class="box">
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
+
+										<div class="box-header with-border text-right">
+
+											<button type="submit" id="submit"
+												class="btn btn-primary btn-sm">
+												<i class="fa fa-hdd-o" aria-hidden="true"></i> Submit
+											</button>
+											<button type="reset" value="reset"
+												class="btn btn-secondary btn-sm">
+												<i class="fa fa-refresh" aria-hidden="true"></i> Reset
+											</button>
+
+											<a th:href="@{/requestquotation/list}"
+												class="btn btn-success btn-sm"> <i class="fa fa-list"
+												aria-hidden="true"></i> View All
+											</a>
+
+
+										</div>
+
+										<div class="col-md-12 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
+												</div>
+												<!-- /.box-header -->
+												<!-- form start -->
+												<h5>Request for Quotation Detail</h5>
 
 
 
-									<div class="col-md-12 shadow bg-white rounded"
-										style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											<!-- form start -->
-											<h5>Request for Quotation Detail</h5>
-
-
-											<form role="form" th:action="@{/requestquotation/}"
-												method="POST" th:object="${rFQuotation}">
 												<div class="box-body">
 
 													<div class="form-group col-md-4">
@@ -297,7 +317,8 @@
 																		<td><select id="supplierId0"
 																			class="form-control form-control-sm select" required
 																			title="supplier code" onchange="supplierInfo()"
-																			name="listRFQuotationSupply[0].suppCode" style="width: 190px">
+																			name="listRFQuotationSupply[0].suppCode"
+																			style="width: 190px">
 																				<option value=" ">Select</option>
 																				<option th:each="supplier :  ${listSupplier}"
 																					th:text="${supplier.partyName}"
@@ -399,30 +420,21 @@
 
 
 
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
-												</div>
+												
 
-
-											</form>
-
-
+											</div>
+											<!-- /.box -->
+											
 										</div>
-										<!-- /.box -->
-										<div
-											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/requestquotation/list}">View All R.F.Q</a>
-										</div>
+
+
+
 									</div>
-
-
 
 								</div>
 
 							</div>
-
-						</div>
+						</form>
 					</section>
 				</section>
 			</div>
