--- a/src/main/resources/templates/layouts/Master/serviceCategory.html
+++ b/src/main/resources/templates/layouts/Master/serviceCategory.html
@@ -64,34 +64,60 @@
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+						<!-- form start -->
+						<form id="serviceCategoryForm" role="form"
+							th:action="@{/servicecategory/}" method="POST"
+							th:object="${serviceCategory}">
+
+							<!-- Default box -->
+							<div class="box">
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
-									<div class="col-md-2"></div>
+								<div class="row">
 
 
-									<div class="col-md-8">
-										<!-- general form elements -->
-										<div class="box box-primary ">
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											<!-- form start -->
-											<form id="serviceCategoryForm" role="form"
-												th:action="@{/servicecategory/}" method="POST"
-												th:object="${serviceCategory}">
+									<!-- left column -->
+									<div class="col-md-12">
+
+										<div class="box-header with-border text-right">
+
+											<button type="submit" id="submit"
+												class="btn btn-primary btn-sm">
+												<i class="fa fa-hdd-o" aria-hidden="true"></i> Submit
+											</button>
+											<button type="reset" value="reset"
+												class="btn btn-secondary btn-sm">
+												<i class="fa fa-refresh" aria-hidden="true"></i> Reset
+											</button>
+
+											<a th:href="@{/servicecategory/list}"
+												class="btn btn-success btn-sm"> <i class="fa fa-list"
+												aria-hidden="true"></i> View All
+											</a>
+
+
+										</div>
+
+
+										<div class="col-md-2"></div>
+
+
+										<div class="col-md-8">
+											<!-- general form elements -->
+											<div class="box box-primary ">
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
+												</div>
+												<!-- /.box-header -->
+
 												<div class="box-body">
 
 													<div class="form-group col-md-6">
 														<label>Category Code</label><span style="color: red">*</span>
-														<input type="text" class="form-control" title="category code"
-															placeholder="Category Code" th:field="*{categoryCode}">
+														<input type="text" class="form-control"
+															title="category code" placeholder="Category Code"
+															th:field="*{categoryCode}">
 													</div>
 
 
@@ -102,18 +128,19 @@
 															th:field="*{description}" title="This field is required"
 															required>
 													</div>
-<!-- 
+													<!-- 
 													<div class="form-group col-md-6">
 														<label>Account Code</label> <input type="text"
 															class="form-control" placeholder="Account Code"
 															title="account code" th:field="*{accountCode}">
 													</div> -->
-													
-													
+
+
 													<div class="form-group col-md-12">
 														<label class="form-label">Category Type</label> <label
 															style="color: red">*</label> <select class="form-control"
-															id="" title="This field is required" th:field="*{categoryType}" required>
+															id="" title="This field is required"
+															th:field="*{categoryType}" required>
 
 															<option value="S">Sales</option>
 															<option value="J">Journal</option>
@@ -128,38 +155,30 @@
 
 
 													<label class="checkbox-inline"> <input type="radio"
-														value="Y" name="active" checked style="margin-left: 5px" >Active <input
-														type="radio" value="N" name="active"  style="margin-left: 5px">In-Active
+														value="Y" name="active" checked style="margin-left: 5px">Active
+														<input type="radio" value="N" name="active"
+														style="margin-left: 5px">In-Active
 													</label>
 
 												</div>
 												<!-- /.box-body -->
 
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
-												</div>
 
 
-											</form>
-
+											</div>
+											<!-- /.box -->
 
 										</div>
-										<!-- /.box -->
-										<div
-											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/servicecategory/list}">View Service
-												Category List</a>
-										</div>
+
+
+										<div class="col-md-2"></div>
 									</div>
 
-
-									<div class="col-md-2"></div>
 								</div>
 
 							</div>
 
-						</div>
+						</form>
 					</section>
 				</section>
 			</div>
@@ -169,12 +188,10 @@
 	<div th:replace="fragments/footer :: footer">...</div>
 
 	<script>
-
-				$("#serviceCategoryForm").validate({
-					ignoreTitle: true
-				});
-
-			</script>
+		$("#serviceCategoryForm").validate({
+			ignoreTitle : true
+		});
+	</script>
 
 	<!--   <section class="content">
         
