--- a/src/main/resources/templates/layouts/Master/state.html
+++ b/src/main/resources/templates/layouts/Master/state.html
@@ -19,6 +19,9 @@
 <link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
 	th:href="@{/css/skins/_all-skins.min.css}">
 
+<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
+
+
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
@@ -27,7 +30,6 @@
 	rel="stylesheet" />
 <script
 	src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
-
 
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -43,7 +45,6 @@
 }
 </style>
 
-
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -51,94 +52,146 @@
 		<div>
 			<div th:replace="fragments/header :: header">...</div>
 			<div th:replace="fragments/sidebar :: sidebar">...</div>
-			<section class="content-wrapper">
-				<div class="row">
-					<!-- left column -->
-					<div class="col-md-12">
-						<div class="col-md-3"></div>
+
+			<div class="wrapper">
+
+				<section class="content-wrapper">
+
+					<!-- Content Header (Page header) -->
+					<section class="content-header">
+						<h4>
+							State Master
+							<!--<small>it all starts here</small>-->
+						</h4>
+						<ol class="breadcrumb">
+							<li><a href="#"><i class="fa fa-dashboard"></i> Master</a></li>
+							<li><a href="#">State</a></li>
+							<li class="active">Add</li>
+						</ol>
+					</section>
 
 
-						<div class="col-md-6" style="margin-top: 20px;">
+					<!-- Main content -->
+					<section class="content">
 
-							<div class="box box-primary">
-
-								<input type="hidden" id="mess" name="mess" th:value="${message}">
+						<!-- form start -->
+						<form id="stateForm" role="form" th:action="@{/state/}"
+							method="POST" th:object="${state}">
+							
+							<!-- Default box -->
+							<div class="box">
 
 								<div class="box-header with-border">
-									<h3 class="box-title">State Master</h3>
+									<!--<h3 class="box-title">Category Master</h3>-->
+
+									<div class="box-header with-border text-right">
+
+										<button type="submit" id="submit"
+											class="btn btn-primary btn-sm">
+											<i class="fa fa-hdd-o" aria-hidden="true"></i> Submit
+										</button>
+										<button type="reset" value="reset"
+											class="btn btn-secondary btn-sm">
+											<i class="fa fa-refresh" aria-hidden="true"></i> Reset
+										</button>
+
+										<a th:href="@{/state/list}" class="btn btn-success btn-sm">
+											<i class="fa fa-list" aria-hidden="true"></i> View All
+										</a>
+
+
+
+									</div>
+
+
 								</div>
-								<!-- form start -->
-								<form id="stateForm" role="form" th:action="@{/state/}"
-									method="POST" th:object="${state}">
-									<div class="box-body">
+
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
+										<div class="col-md-2"></div>
 
 
-										<div class="form-group col-md-6">
-											<label for="inputEmail4">State Code</label> <input
-												type="text" class="form-control" placeholder="State Code"
-												title="state code" th:field="*{stateCode}">
+										<div class="col-md-8 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
+												<input type="hidden" id="mess" name="mess"
+													th:value="${message}">
+
+
+												<!-- /.box-header -->
+
+												<div class="box-body">
+
+
+													<div class="form-group col-md-6">
+														<label for="inputEmail4">State Code</label> <input
+															type="text" class="form-control" placeholder="State Code"
+															title="state code" th:field="*{stateCode}">
+													</div>
+													<div class="form-group col-md-6">
+														<label for="inputPassword4">State Name</label><span
+															style="color: red">*</span> <input type="text"
+															class="form-control" placeholder="State Name"
+															th:field="*{stateName}" title="This field is required"
+															required>
+													</div>
+
+
+
+													<div class="form-group col-md-12">
+														<label for="inputEmail4">State GST Code</label> <input
+															type="text" class="form-control"
+															placeholder="State Gst Code" title="state gst code"
+															th:field="*{gstStateCode}">
+													</div>
+
+													<div class="form-group col-md-12">
+														<label class="form-label">Country Name</label> <label
+															style="color: red">*</label> <select class="form-control"
+															title="This field is required" required
+															th:field="*{country}">
+															<option value="">Select Country</option>
+															<option th:each="country :  ${countryList}"
+																th:text="${country.countryName}"
+																th:value=" ${country.countryCode}"></option>
+														</select>
+													</div>
+
+
+													<label class="checkbox-inline"> <input type="radio"
+														value="Y" name="active" checked style="margin-left: 5px">Active
+														<input type="radio" value="N" name="active"
+														style="margin-left: 5px">In-Active
+													</label>
+
+
+
+
+												</div>
+												<!-- /.box-body -->
+
+
+
+											</div>
+
 										</div>
-										<div class="form-group col-md-6">
-											<label for="inputPassword4">State Name</label><span
-												style="color: red">*</span> <input type="text"
-												class="form-control" placeholder="State Name"
-												th:field="*{stateName}" title="This field is required"
-												required>
-										</div>
 
 
-
-										<div class="form-group col-md-12">
-											<label for="inputEmail4">State GST Code</label> <input
-												type="text" class="form-control"
-												placeholder="State Gst Code" title="state gst code"
-												th:field="*{gstStateCode}">
-										</div>
-
-										<div class="form-group col-md-12">
-											<label class="form-label">Country Name</label> <label
-												style="color: red">*</label> <select class="form-control"
-												title="This field is required" required
-												th:field="*{country}">
-												<option value="">Select Country</option>
-												<option th:each="country :  ${countryList}"
-													th:text="${country.countryName}"
-													th:value=" ${country.countryCode}"></option>
-											</select>
-										</div>
-
-
-										<label class="checkbox-inline"> <input type="radio"
-											value="Y" name="active" checked style="margin-left: 5px">Active
-											<input type="radio" value="N" name="active"
-											style="margin-left: 5px">In-Active
-										</label>
-
+										<div class="col-md-2"></div>
 									</div>
 
-									<div class="box-footer">
-										<input type="submit" value="Submit" class="btn btn-primary" />
-										<input type="reset" value="Reset" class="btn btn-danger" />
-									</div>
+								</div>
 
-									<div style="width: parent; text-align-last: right; margin: 8px">
-										<a th:href="@{/state/list}">view state list</a>
-									</div>
-
-
-								</form>
 							</div>
-						</div>
-
-
-						<div class="col-md-3"></div>
-					</div>
-
-				</div>
-			</section>
-
+						</form>
+					</section>
+				</section>
+			</div>
 		</div>
 	</div>
+
 	<div th:replace="fragments/footer :: footer">...</div>
 
 	<script>
@@ -159,10 +212,18 @@
 		});
 	</script>
 
-
 	<script>
-		$("#stateForm").validate({
+		$("#categoryForm").validate({
 			ignoreTitle : true
+		});
+
+		$(document).ready(function() {
+			$(".textOnly").keypress(function(e) {
+				var key = e.keyCode;
+				if (key >= 48 && key <= 57) {
+					e.preventDefault();
+				}
+			});
 		});
 	</script>
 
