--- a/src/main/resources/templates/layouts/Master/subModule.html
+++ b/src/main/resources/templates/layouts/Master/subModule.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head >
+<head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>EBS</title>
@@ -51,9 +51,9 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i> Master</a></li>
+							<li><a href="#">Sub-Module</a></li>
+							<li class="active">Add page</li>
 						</ol>
 					</section>
 
@@ -61,34 +61,59 @@
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+						<!-- form start -->
+						<form id="subModuleMasterForm" role="form"
+							th:action="@{/sub-module/}" th:object="${subModule}"
+							method="post">
+
+							<!-- Default box -->
+							<div class="box">
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
-									<div class="col-md-2"></div>
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
 
 
-									<div class="col-md-8 shadow bg-white rounded"
-										style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											<!-- form start -->
-											<form id="subModuleMasterForm" role="form"
-												th:action="@{/sub-module/}" th:object="${subModule}"
-												method="post">
+
+										<div class="box-header with-border text-right">
+
+											<button type="submit" id="submit"
+												class="btn btn-primary btn-sm">
+												<i class="fa fa-hdd-o" aria-hidden="true"></i> Submit
+											</button>
+											<button type="reset" value="reset"
+												class="btn btn-secondary btn-sm">
+												<i class="fa fa-refresh" aria-hidden="true"></i> Reset
+											</button>
+
+											<a th:href="@{/sub-module/list}"
+												class="btn btn-success btn-sm"> <i class="fa fa-list"
+												aria-hidden="true"></i> View All
+											</a>
+
+
+										</div>
+
+										<div class="col-md-2"></div>
+
+
+										<div class="col-md-8 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
+												</div>
+												<!-- /.box-header -->
+
 												<div class="box-body">
 
 													<div class="form-group col-md-6">
-														<label for="inputEmail4">Sub Module Code</label><span style="color:red" >*</span> <input
-															type="text" class="form-control" placeholder="Sub Module Code"
+														<label for="inputEmail4">Sub Module Code</label><span
+															style="color: red">*</span> <input type="text"
+															class="form-control" placeholder="Sub Module Code"
 															th:field="*{subModuleCode}" title=" sub module code">
 													</div>
 													<div class="form-group col-md-6">
@@ -131,30 +156,26 @@
 												</div>
 												<!-- /.box-body -->
 
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
-												</div>
 
 
-											</form>
 
+
+
+
+											</div>
 
 										</div>
-										<!-- /.box -->
-										<div
-											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/sub-module/list}">View All SubModule</a>
-										</div>
+
+
+										<div class="col-md-2"></div>
 									</div>
 
-
-									<div class="col-md-2"></div>
 								</div>
 
 							</div>
 
-						</div>
+						</form>
+
 					</section>
 				</section>
 			</div>
@@ -166,12 +187,10 @@
 
 
 	<script>
-
-				$("#subModuleMasterForm").validate({
-					ignoreTitle: true
-				});
-
-			</script>
+		$("#subModuleMasterForm").validate({
+			ignoreTitle : true
+		});
+	</script>
 
 	<!--   <section class="content">
         
