--- a/src/main/resources/templates/layouts/editview/editCountry.html
+++ b/src/main/resources/templates/layouts/editview/editCountry.html
@@ -2,15 +2,22 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>AdminLTE 2 | General Form Elements</title>
-	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
-	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>AdminLTE 2 | General Form Elements</title>
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
+<link rel="stylesheet" href="../../css/bootstrap.min.css"
+	th:href="@{/css/bootstrap.min.css}">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+<link rel="stylesheet" href="../../css/AdminLTE.min.css"
+	th:href="@{/css/AdminLTE.min.css}">
+<link rel="stylesheet" href="../../css/skins/_all-skins.min.css"
+	th:href="@{/css/skins/_all-skins.min.css}">
 
 </head>
 
@@ -31,9 +38,9 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i> Master</a></li>
+							<li><a href="#">Employee Info</a></li>
+							<li class="active">Edit Country</li>
 						</ol>
 					</section>
 
@@ -41,84 +48,98 @@
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+						<!-- form start -->
+						<form role="form" th:action="@{/country/update/}" method="POST"
+							th:object="${country}">
+
+							<!-- Default box -->
+							<div class="box">
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
-									<div class="col-md-2">
-									</div>
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
+										<div class="col-md-2"></div>
 
 
-									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div><!-- /.box-header -->
-											<!-- form start -->
-											<form role="form" th:action="@{/country/update/}" method="POST"
-												th:object="${country}">
+										<div class="col-md-8 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
+												</div>
+
+												<div class="box-header with-border text-right">
+													<button type="submit" id="submit"
+														class="btn btn-primary btn-sm">
+														<i class="fa fa-hdd-o" aria-hidden="true"></i> Apply
+														Changes
+													</button>
+													<button type="button" class="btn btn-danger btn-sm"
+														onclick="history.back()">
+														<i class="fa fa-step-backward"></i> Go Back
+													</button>
+												</div>
+												<!-- /.box-header -->
+
 												<div class="box-body">
 
 													<div class="form-group col-md-6">
-														<label for="inputEmail4">Country Code</label> <input type="text"
-															class="form-control" placeholder="country code"
-															th:field="*{countryCode}">
+														<label for="inputEmail4">Country Code</label> <input
+															type="text" class="form-control"
+															placeholder="country code" th:field="*{countryCode}">
 													</div>
 													<div class="form-group col-md-6">
 														<label for="inputPassword4">Country Name</label> <input
-															type="text" class="form-control" placeholder="country name"
-															th:field="*{countryName}">
+															type="text" class="form-control"
+															placeholder="country name" th:field="*{countryName}">
 													</div>
 
 
 
 
-												<label class="checkbox-inline"> <input type="radio"
-														value="Y" name="active" checked style="margin-left: 5px" >Active <input
-														type="radio" value="N" name="active"  style="margin-left: 5px">In-Active
+													<label class="checkbox-inline"> <input type="radio"
+														value="Y" name="active" checked style="margin-left: 5px">Active
+														<input type="radio" value="N" name="active"
+														style="margin-left: 5px">In-Active
 													</label>
-												</div><!-- /.box-body -->
-
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Apply Changes " class="btn btn-primary" />
-													<input type="button" value="Go back!" class="btn btn-danger"onclick="history.back()">
 												</div>
+												<!-- /.box-body -->
 
 
-											</form>
+
+											</div>
+											<!-- /.box -->
+
+										</div>
 
 
-										</div><!-- /.box -->
-								
+										<div class="col-md-2"></div>
 									</div>
 
-
-									<div class="col-md-2">
-									</div>
 								</div>
 
 							</div>
-
-						</div>
+						</form>
 					</section>
 				</section>
 			</div>
-</div>
-</div>
-			<div th:replace="fragments/footer :: footer">...</div>
-			<!--   <section class="content">
+		</div>
+	</div>
+	<div th:replace="fragments/footer :: footer">...</div>
+	<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
-			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
-			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
-			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
-			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
+	<script src="../../js/jQuery-2.1.4.min.js"
+		th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+	<script src="../../js/bootstrap.min.js"
+		th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="../../js/fastclick.min.js"
+		th:src="@{/js/fastclick.min.js}"></script>
+	<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+	<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
 
 </html>
