--- a/src/main/resources/templates/layouts/editview/editFinancialyear.html
+++ b/src/main/resources/templates/layouts/editview/editFinancialyear.html
@@ -57,9 +57,10 @@
 
 
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i>Admin
+									Module</a></li>
+							<li><a href="#">Financial Year</a></li>
+							<li class="active">Edit Financial</li>
 						</ol>
 					</section>
 
@@ -67,33 +68,47 @@
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+						<!-- form start -->
+						<form role="form" th:action="@{/financialyear/update}"
+							method="POST" th:object="${financialYear}">
+
+							<!-- Default box -->
+							<div class="box">
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
-									<div class="col-md-2"></div>
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
+
+										<div class="box-header with-border text-right">
+											<button type="submit" id="submit"
+												class="btn btn-primary btn-sm">
+												<i class="fa fa-hdd-o" aria-hidden="true"></i> Apply Changes
+											</button>
+											<button type="button" class="btn btn-danger btn-sm"
+												onclick="history.back()">
+												<i class="fa fa-step-backward"></i> Go Back
+											</button>
+										</div>
+
+										<div class="col-md-2"></div>
 
 
-									<div class="col-md-8 shadow bg-white rounded"
-										style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
+										<div class="col-md-8 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
 
-											<input type="hidden" id="mess" name="mess"
-												th:value="${message}">
+												<input type="hidden" id="mess" name="mess"
+													th:value="${message}">
 
 
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											<!-- form start -->
-											<form role="form" th:action="@{/financialyear/update}"
-												method="POST" th:object="${financialYear}">
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
+												</div>
+												<!-- /.box-header -->
+
 
 
 
@@ -110,23 +125,24 @@
 													<div class="form-group col-md-12">
 														<label for="inputPassword4">From (Date)</label><span
 															style="color: red">*</span> <input type="date"
-															class="form-control"
-															placeholder='From Date' title="This field is required"
-															th:field="*{fromDate}" required />
+															class="form-control" placeholder='From Date'
+															title="This field is required" th:field="*{fromDate}"
+															required />
 													</div>
 													<div class="form-group col-md-12">
 														<label for="inputEmail4">To (Date)</label><span
 															style="color: red">*</span> <input type="date"
-															class="form-control"
-															placeholder='To Date' title="This field is required"
-															th:field="*{toDate}" required />
+															class="form-control" placeholder='To Date'
+															title="This field is required" th:field="*{toDate}"
+															required />
 													</div>
 
 
 
 													<label class="checkbox-inline"> <input type="radio"
-														value="Y" name="active" checked style="margin-left: 5px" >Active <input
-														type="radio" value="N" name="active"  style="margin-left: 5px">In-Active
+														value="Y" name="active" checked style="margin-left: 5px">Active
+														<input type="radio" value="N" name="active"
+														style="margin-left: 5px">In-Active
 													</label>
 
 
@@ -145,28 +161,27 @@
 												</div>
 												<!-- /.box-body -->
 
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Go-back" class="btn btn-danger"
-														onclick="history.back()" />
-												</div>
 
 
-											</form>
 
+
+
+
+											</div>
+											<!-- /.box -->
 
 										</div>
-										<!-- /.box -->
 
+
+										<div class="col-md-2"></div>
 									</div>
 
-
-									<div class="col-md-2"></div>
 								</div>
 
 							</div>
 
-						</div>
+						</form>
+
 					</section>
 				</section>
 			</div>
@@ -193,23 +208,21 @@
 
 		});
 
-	/* 	$("#datepicker").datepicker({
-			format : "yyyy",
-			viewMode : "years",
-			minViewMode : "years",
-			autoclose : true
-		//to close picker once year is selected
-		});
+		/* 	$("#datepicker").datepicker({
+				format : "yyyy",
+				viewMode : "years",
+				minViewMode : "years",
+				autoclose : true
+			//to close picker once year is selected
+			});
 
-		$("#fromDate").datepicker({
-			format : "yyyy",
-			viewMode : "years",
-			minViewMode : "years",
-			autoclose : true
-		//to close picker once year is selected
-		}); */
-		
-		
+			$("#fromDate").datepicker({
+				format : "yyyy",
+				viewMode : "years",
+				minViewMode : "years",
+				autoclose : true
+			//to close picker once year is selected
+			}); */
 	</script>
 	<!--   <section class="content">
         
