--- a/src/main/resources/templates/layouts/editview/editGateEntry.html
+++ b/src/main/resources/templates/layouts/editview/editGateEntry.html
@@ -59,9 +59,10 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i>
+									Warehouse</a></li>
+							<li><a href="#">Gate Entry</a></li>
+							<li class="active">Add page</li>
 						</ol>
 					</section>
 
@@ -69,32 +70,50 @@
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+
+						<!-- form start -->
+						<form role="form" th:action="@{/gateentry/}"
+							th:object="${gateEntry}" method="POST">
+
+
+							<!-- Default box -->
+							<div class="box">
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
 
 
 
-									<div class="col-md-12 shadow bg-white rounded"
-										style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
+										<div class="col-md-12 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
 
-											<input type="hidden" id="mess" name="mess"
-												th:value="${message}">
+												<input type="hidden" id="mess" name="mess"
+													th:value="${message}">
 
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											<!-- form start -->
-											<form role="form" th:action="@{/gateentry/}"
-												th:object="${gateEntry}" method="POST">
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
+
+													<div class="box-header with-border text-right">
+														<button type="submit" id="submit"
+															class="btn btn-primary btn-sm">
+															<i class="fa fa-hdd-o" aria-hidden="true"></i> Apply
+															Changes
+														</button>
+														<button type="button" class="btn btn-danger btn-sm"
+															onclick="history.back()">
+															<i class="fa fa-step-backward"></i> Go Back
+														</button>
+													</div>
+
+
+												</div>
+												<!-- /.box-header -->
+
 
 												<div class="box">
 													<h5 class="box-title">Gate Entry</h5>
@@ -376,29 +395,28 @@
 
 
 
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Apply Changes "
-														class="btn btn-primary" /> <input type="reset"
-														value="Reset" class="btn btn-danger" />
-												</div>
-											</form>
 
 
-										</div>
-										<!-- /.box -->
-										<!-- <div
+
+
+											</div>
+											<!-- /.box -->
+											<!-- <div
 											style="width: parent; text-align-last: right; margin: 8px">
 											<a th:href="@{/gateentry/list}">View All Gate-Entry</a>
 										</div>
- -->									</div>
+ -->
+										</div>
 
 
+
+									</div>
 
 								</div>
 
 							</div>
 
-						</div>
+						</form>
 					</section>
 				</section>
 			</div>
