--- a/src/main/resources/templates/layouts/editview/editItem.html
+++ b/src/main/resources/templates/layouts/editview/editItem.html
@@ -41,22 +41,38 @@
 			<div class="wrapper">
 
 				<section class="content-wrapper">
-					<div class="row">
-						<!-- left column -->
+
+					<!-- form start -->
+					<form role="form" th:action="@{/item/}" method="post"
+						th:object="${item}" novalidate>
+
+
+						<div class="row">
+							<!-- left column -->
 
 
 
 
-						<div class="col-md-12" style="margin-top: 20px;">
+							<div class="col-md-12" style="margin-top: 20px;">
 
-							<div class="box box-primary">
-								<input type="hidden" id="mess" name="mess" th:value="${message}">
-								<div class="box-header with-border">
-									<h3 class="box-title">Item Master</h3>
-								</div>
-								<!-- form start -->
-								<form role="form" th:action="@{/item/}" method="post"
-									th:object="${item}" novalidate>
+								<div class="box box-primary">
+									<input type="hidden" id="mess" name="mess"
+										th:value="${message}">
+									<div class="box-header with-border">
+										<h3 class="box-title">Item Master</h3>
+									</div>
+
+									<div class="box-header with-border text-right">
+										<button type="submit" id="submit"
+											class="btn btn-primary btn-sm">
+											<i class="fa fa-hdd-o" aria-hidden="true"></i> Apply Changes
+										</button>
+										<button type="button" class="btn btn-danger btn-sm"
+											onclick="history.back()">
+											<i class="fa fa-step-backward"></i> Go Back
+										</button>
+									</div>
+
 
 									<div class="box-body">
 
@@ -298,15 +314,14 @@
 																<div class="form-group col-md-2">
 																	<label for="inputEmail4">Store Code</label> <input
 																		type="email" class="form-control form-control-sm"
-																		id="storeCode"
-																		placeholder="Store Code" title="store code">
+																		id="storeCode" placeholder="Store Code"
+																		title="store code">
 																</div>
 																<div class="form-group col-md-4">
 																	<label class="form-label">Store Name</label> <label
 																		style="color: red">*</label> <select
-																		class="form-control" title="store name"
-																		id="storeName"
-																		th:field="*{store}" onchange="selectStore()"> 
+																		class="form-control" title="store name" id="storeName"
+																		th:field="*{store}" onchange="selectStore()">
 																		<option value="">Select</option>
 																		<option th:each="store :  ${listStore}"
 																			th:text="${store.storeCode}"
@@ -320,7 +335,7 @@
 																		th:field="*{binNum}">
 																</div>
 
-																<div class="form-group col-md-3"> 
+																<div class="form-group col-md-3">
 																	<label for="inputPassword4">Bin Location</label> <input
 																		type="text" class="form-control form-control-sm"
 																		title="bin location" placeholder="Bin Location"
@@ -566,12 +581,7 @@
 
 													</div>
 
-													<div class="box-footer">
-														<button type="submit" class="btn btn-primary">Apply
-															Changes</button>
-														<input type="button" value="Go back!"
-															class="btn btn-danger" onclick="history.back()">
-													</div>
+
 												</div>
 												<!--end packing detail -->
 
@@ -584,20 +594,23 @@
 											</div>
 										</div>
 									</div>
-								</form>
 
-								<!-- <div style="width: parent; text-align-last: right; margin:8px">
+
+									<!-- <div style="width: parent; text-align-last: right; margin:8px">
 									<a th:href="@{/item/list}">View All Item</a>
 								</div> -->
 
+								</div>
 							</div>
+
+
+
+
+
 						</div>
 
+					</form>
 
-
-
-
-					</div>
 				</section>
 			</div>
 			<div th:replace="fragments/footer :: footer">...</div>
@@ -605,18 +618,14 @@
 	</div>
 
 	<script>
-	
-	window.addEventListener("load", myInit, true); 
-	function myInit(){  
-		console.log("onload function ")
-		getUomNameInfo();
-		selectStore()
-		
-		}; 
-	
-	
-	
-	
+		window.addEventListener("load", myInit, true);
+		function myInit() {
+			console.log("onload function ")
+			getUomNameInfo();
+			selectStore()
+
+		};
+
 		var idIndex = 0;
 		$(document)
 				.ready(
@@ -678,13 +687,11 @@
 			var uomName = document.getElementById("uomName").value;
 			document.getElementById("uomCode").value = uomName;
 		}
-		
-		function selectStore(){
+
+		function selectStore() {
 			var storeCode = document.getElementById("storeName").value;
 			document.getElementById("storeCode").value = storeCode;
 		}
-		
-		
 	</script>
 
 
