--- a/src/main/resources/templates/layouts/editview/editItemOpening.html
+++ b/src/main/resources/templates/layouts/editview/editItemOpening.html
@@ -61,9 +61,10 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i>
+									Warehouse</a></li>
+							<li><a href="#">Item-Opening</a></li>
+							<li class="active">edit page</li>
 						</ol>
 					</section>
 
@@ -71,31 +72,46 @@
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+						<!-- form start -->
+						<form id="itemOpeningForm" role="form"
+							th:action="@{/itemopening/}" method="POST"
+							th:object="${itemOpening}">
+
+							<!-- Default box -->
+							<div class="box">
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
-									<div class="col-md-2"></div>
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
+
+										<div class="box-header with-border text-right">
+											<button type="submit" id="submit"
+												class="btn btn-primary btn-sm">
+												<i class="fa fa-hdd-o" aria-hidden="true"></i> Apply Changes
+											</button>
+											<button type="button" class="btn btn-danger btn-sm"
+												onclick="history.back()">
+												<i class="fa fa-step-backward"></i> Go Back
+											</button>
+										</div>
+										<div class="col-md-2"></div>
 
 
-									<div class="col-md-8 shadow bg-white rounded"
-										style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
-											<input type="hidden" id="mess" name="mess"
-												th:value="${message}">
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											<!-- form start -->
-											<form id="itemOpeningForm" role="form"
-												th:action="@{/itemopening/}" method="POST"
-												th:object="${itemOpening}">
+										<div class="col-md-8 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
+												<input type="hidden" id="mess" name="mess"
+													th:value="${message}">
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
+												</div>
+
+
+												<!-- /.box-header -->
+
 												<div class="box-body">
 
 
@@ -173,32 +189,24 @@
 												</div>
 												<!-- /.box-body -->
 
-											<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Apply Changes " class="btn btn-primary" />
-													<input type="button" value="Go back!"
-														class="btn btn-danger" onclick="history.back()">
-												</div>
 
 
-
-											</form>
-
-
-										</div>
-										<!-- /.box -->
-										<!-- <div
+											</div>
+											<!-- /.box -->
+											<!-- <div
 											style="width: parent; text-align-last: right; margin: 8px">
 											<a th:href="@{/itemopening/list}">View All Item-Opening</a>
 										</div> -->
+										</div>
+
+
+										<div class="col-md-2"></div>
 									</div>
 
-
-									<div class="col-md-2"></div>
 								</div>
 
 							</div>
-
-						</div>
+						</form>
 					</section>
 				</section>
 			</div>
@@ -272,7 +280,7 @@
 
 		window.onload = function() {
 			getItemDetail();
-			
+
 		}
 	</script>
 
