--- a/src/main/resources/templates/layouts/editview/editModule.html
+++ b/src/main/resources/templates/layouts/editview/editModule.html
@@ -48,28 +48,44 @@
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+						<!-- form start -->
+						<form role="form" th:action="@{/module/update/}" method="POST"
+							th:object="${module}">
+
+							<!-- Default box -->
+							<div class="box">
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
-									<div class="col-md-2"></div>
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
 
 
-									<div class="col-md-8 shadow bg-white rounded"
-										style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											<!-- form start -->
-											<form role="form" th:action="@{/module/update/}" method="POST"
-												th:object="${module}">
+
+										<div class="box-header with-border text-right">
+											<button type="submit" id="submit"
+												class="btn btn-primary btn-sm">
+												<i class="fa fa-hdd-o" aria-hidden="true"></i> Apply Changes
+											</button>
+											<button type="button" class="btn btn-danger btn-sm"
+												onclick="history.back()">
+												<i class="fa fa-step-backward"></i> Go Back
+											</button>
+										</div>
+
+										<div class="col-md-2"></div>
+
+
+										<div class="col-md-8 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
+												</div>
+												<!-- /.box-header -->
+
 												<div class="box-body">
 
 													<div class="form-group col-md-12">
@@ -106,28 +122,27 @@
 												</div>
 												<!-- /.box-body -->
 
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Apply Changes " class="btn btn-primary" />
-													<input type="button" value="Go back!"
-														class="btn btn-danger" onclick="history.back()">
-												</div>
 
 
-											</form>
 
+
+
+
+											</div>
+											<!-- /.box -->
 
 										</div>
-										<!-- /.box -->
 
+
+										<div class="col-md-2"></div>
 									</div>
 
-
-									<div class="col-md-2"></div>
 								</div>
 
 							</div>
 
-						</div>
+						</form>
+
 					</section>
 				</section>
 			</div>
