--- a/src/main/resources/templates/layouts/editview/editRequestForQuotation.html
+++ b/src/main/resources/templates/layouts/editview/editRequestForQuotation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<head xmlns:th="http://www.thymeleaf.org">
+<head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>EBS</title>
@@ -54,9 +54,10 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i> Purchase
+									Module</a></li>
+							<li><a href="#">Purchase Order</a></li>
+							<li class="active">edit request for quotation</li>
 						</ol>
 					</section>
 
@@ -64,34 +65,51 @@
 					<!-- Main content -->
 					<section class="content">
 
-						<!-- Default box -->
-						<div class="box">
+						<!-- form start -->
+						<form role="form" th:action="@{/requestquotation/}" method="POST"
+							th:object="${rFQuotation}">
+
+							<!-- Default box -->
+							<div class="box">
 
 
 
-							<div class="row">
-								<!-- left column -->
-								<div class="col-md-12">
+								<div class="row">
+									<!-- left column -->
+									<div class="col-md-12">
 
 
 
-									<div class="col-md-12 shadow bg-white rounded"
-										style="margin-top: 20px;">
-										<!-- general form elements -->
-										<div class="box box-primary">
-											<div class="box-header with-border">
-												<!--<h3 class="box-title">Category Master</h3>-->
-											</div>
-											<!-- /.box-header -->
-											<!-- form start -->
-											<form role="form" th:action="@{/requestquotation/}"
-												method="POST" th:object="${rFQuotation}">
+										<div class="col-md-12 shadow bg-white rounded"
+											style="margin-top: 20px;">
+											<!-- general form elements -->
+											<div class="box box-primary">
+												<div class="box-header with-border">
+													<!--<h3 class="box-title">Category Master</h3>-->
+												</div>
+
+												<div class="box-header with-border text-right">
+													<button type="submit" id="submit"
+														class="btn btn-primary btn-sm">
+														<i class="fa fa-hdd-o" aria-hidden="true"></i> Apply
+														Changes
+													</button>
+													<button type="button" class="btn btn-danger btn-sm"
+														onclick="history.back()">
+														<i class="fa fa-step-backward"></i> Go Back
+													</button>
+												</div>
+
+
+												<!-- /.box-header -->
+
 												<div class="box-body">
 
 													<div class="form-group col-md-4">
 														<label for="inputEmail4">Request for Quotation Num</label>
 														<input type="text" class="form-control"
-															placeholder="quotation number" th:field="*{rfqNo}" readonly>
+															placeholder="quotation number" th:field="*{rfqNo}"
+															readonly>
 													</div>
 													<div class="form-group col-md-4">
 														<label class="form-label">Request For Quotation
@@ -181,8 +199,8 @@
 
 																		<td><input type="text" title="uom"
 																			class="form-control form-control-sm" id="uom"
-																			th:field="*{listRFQuotation[__${stat.index}__].uom}" readonly>
-																		</td>
+																			th:field="*{listRFQuotation[__${stat.index}__].uom}"
+																			readonly></td>
 
 																		<td><input type="text" title="city"
 																			class="form-control form-control-sm" id="qty0"
@@ -341,31 +359,26 @@
 
 
 
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Apply Changes" class="btn btn-primary" />
-													<input type="button" value="Go back!"
-														class="btn btn-danger" onclick="history.back()">
-												</div>
 
 
-											</form>
-
-
+											</div>
+											<!-- /.box -->
+											<div
+												style="width: parent; text-align-last: right; margin: 8px">
+												<a th:href="@{/requestquotation/list}">View All R.F.Q</a>
+											</div>
 										</div>
-										<!-- /.box -->
-										<div
-											style="width: parent; text-align-last: right; margin: 8px">
-											<a th:href="@{/requestquotation/list}">View All R.F.Q</a>
-										</div>
+
+
+
 									</div>
-
-
 
 								</div>
 
 							</div>
 
-						</div>
+						</form>
+
 					</section>
 				</section>
 			</div>
